--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -50,6 +50,16 @@
                 $('#logout').click(function(){
                 localStorage.username = "";
                 });
+                 var login = localStorage.username;
+
+                if($('.user') != null){
+                    if(login == ""){
+                        $('.user').text("Login");
+                    }else{
+
+                        $('.user').text(login);
+                    }
+                }
                 $('#register').click(function() {
                     
                     window.location.href = "/CemeteryListingsWebApp/api/auth/register";
