--- a/src/main/webapp/WEB-INF/views/contact.html
+++ b/src/main/webapp/WEB-INF/views/contact.html
@@ -38,7 +38,12 @@
         </div>
     </div>
                       
-    
+    <script>
+        $('#logout').click(function(){
+            localStorage.username = "";
+            window.location.href = "/CemeteryListingsWebApp/";
+        });
+    </script>
    
    
 </body>
