--- a/src/main/webapp/WEB-INF/views/cemeteryListingsPage.html
+++ b/src/main/webapp/WEB-INF/views/cemeteryListingsPage.html
@@ -41,19 +41,16 @@
         <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
         
         <script type="text/javascript">
-          $('#logout').click(function(){
-            localStorage.username = "";
-            window.location.href = "/CemeteryListingsWebApp/";
-           });
-           
+           console.log('hi');
+    	   
     	   var countData = 0;
                $.ajax({ // ajax call to retrieve all cemeteries json objects 
                     type: "GET",
                     url: "/CemeteryListingsWebApp/api/cemetery/show",
                     dataType: "json",
                     success: function (data) {
-                        //console.log('success');
-                        //console.log(data);
+                        console.log('success');
+                        console.log(data);
                         //console.log(data[0]['contactName']);
                         countData = data.length;
                         
@@ -61,7 +58,7 @@
                         for(var i = 0; i < data.length; i++) 
                         {
                             var obj = data[i];
-                                /*console.log(obj.id);
+                                console.log(obj.id);
                                 console.log(obj.location.country);
                                 console.log(obj.location.province_State);
                                 console.log(obj.location.district_state);
@@ -69,7 +66,7 @@
                                 console.log(obj.location.cemeteryName);
                                 console.log(obj.location.locationOfCemetery);
                                 console.log(obj.contactName);
-                                console.log(obj.contactNumber);*/
+                                console.log(obj.contactNumber);
 // building html objects here
 
                                 $(".listings").append(' <tr>' 
@@ -90,7 +87,9 @@
                     if(localStorage.username == ""){
                         window.location.href = "/CemeteryListingsWebApp/api/auth/login";
                     }else{
-				var htmlString = $( this ).eq();
+				var htmlString = $( this ).eq();	
+        		console.log(htmlString);
+        		console.log(htmlString.context.value);
 
         		localStorage.cemeteryID = htmlString.context.value;
     
@@ -104,7 +103,7 @@
 
                     error: function (jqXHR, status) {
                         // error handler
-                        //console.log(jqXHR);
+                        console.log(jqXHR);
                         alert('fail' + status.code);
                     }
                  });
