--- a/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
+++ b/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
@@ -105,7 +105,7 @@
                 $("#otherNames").keypress(function(e){
                     var value = $(this).val().replace(" ", "");
                     var words = value.split(",");
-                    //console.log(words);
+                    console.log(words);
                     names = words;
                     localStorage.unpublishedOtherNames = words;
                 });
@@ -116,8 +116,8 @@
                             url: "/CemeteryListingsWebApp/api/cemetery/show",
                             dataType: "json",
                             success: function (data) {
-                                //console.log('success');
-                                //console.log(data);
+                                console.log('success');
+                                console.log(data);
                                 //console.log(data[0]['contactName']);
                                 countData = data.length;
 
@@ -125,9 +125,9 @@
                                 for(var i = 0; i < data.length; i++) 
                                 {
                                     var obj = data[i];
-                                       // console.log(obj.id);
+                                        console.log(obj.id);
 
-                                       // console.log(obj.location.cemeteryName);
+                                        console.log(obj.location.cemeteryName);
                                         $('#cemeteryID').append('<option>' + obj.id + '</option>');
                                         $('#cemeteryName').append('<option>' + obj.location.cemeteryName + '</option>');
 
@@ -136,12 +136,12 @@
                             },
                             error: function (jqXHR, status) {
                                 // error handler
-                                //console.log(jqXHR);
-                                //alert('fail' + status.code);
+                                console.log(jqXHR);
+                                alert('fail' + status.code);
                             }
                          });
 
-                        //console.log('one love');
+                        console.log('one love');
 
 
                   var x = $( "#cemeteryName option:selected" ).text();
@@ -149,8 +149,8 @@
 
                   $('#cemeteryName').click( function() {
                     //$('.second').children().eq(0);
-                        //console.log($( "#cemeteryName option:selected" ).text());
-                         //console.log($( "#cemeteryName option:selected" ).index());
+                        console.log($( "#cemeteryName option:selected" ).text());
+                         console.log($( "#cemeteryName option:selected" ).index());
                          selectedCemeteryID = $("#cemeteryName option:selected" ).index();
                          console.log($('#cemeteryID').children().eq(x).val());
                   });
