--- a/src/main/webapp/WEB-INF/views/unpublishedDetailsPage.html
+++ b/src/main/webapp/WEB-INF/views/unpublishedDetailsPage.html
@@ -13,9 +13,12 @@
     <div class="pageHeader">
         <a href="/CemeteryListingsWebApp/" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo3.jpg"></a>
                 <ul class="navList" style="width : 100%">
-                    <li><a href="/CemeteryListingsWebApp/api/auth/loggedIn">Publish Listings</a>
-                    <li><a href="/CemeteryListingsWebApp/api/cemetery/newcemetery">Create Cemetery</a>
-                     <li><a href = "/CemeteryListingsWebApp/api/auth/admin" class="logout" id="logout">Logout</a>
+                    <li><a href="/CemeteryListingsWebApp/">Home</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/cemetery/cemeterylistings">Cemetery Listings</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/DeceasedListing/publishedlistings">Deceased Listings</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/search/contactus">Contact Us</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/auth/login" style="margin-left:10% !important;" class="user" id="user">Login</a></li>
+                    <li><a href = "/CemeteryListingsWebApp/" class="logout" id="logout">Logout</a>
                 </ul>   
             </div>
             <div class="dummyHeader"></div>
@@ -43,9 +46,9 @@
                             <tr><td>Subscriber ID</td><td><input disabled type="text" name="subscriberSubmitID" id="subscriberSubmitID" placeholder="Subscriber ID" style="width:100%"></td> </tr>
                             
                         </table>     
-                        <input type="button" name="publishListing" id="publishListing" value="Publish Listing" style="margin-left : 30%">
+                        <input type="button" name="publishListing" id="publishListing" value="Submit" style="margin-left : 30%">
                         
-                        <input type="button" name="deleteUnpublishedListing" id="deleteUnpublishedListing" value="Delete Listing">
+                        <input type="button" name="deleteUnpublishedListing" id="deleteUnpublishedListing" value="Delete">
 	                </form>
              </div>
              <table class="listings"></table>
@@ -84,8 +87,8 @@
                         dataType: "JSON",
                         contentType: "application/json",
                         success: function (data) {
-                            //console.log('success');
-                            //console.log(data);
+                            console.log('success');
+                            console.log(data);
                             }
                                 });
                                 
@@ -122,9 +125,8 @@
                     type: "POST",
                     url: "/CemeteryListingsWebApp/api/unpublishedListings/delete/"+obj.requiresApprovalDeceasedListingID+"",
                     success: function (data) {
-                        //console.log('success');
-                        //console.log(data);
-                        window.location.href = "/CemeteryListingsWebApp/api/auth/loggedIn";
+                        console.log('success');
+                        console.log(data);
                         }
                             });
                     });
@@ -138,13 +140,13 @@
                         console.log(data);
             
                            obj  = data;
-                                                /*console.log(obj.requiresApprovalDeceasedListingID);
+                                                console.log(obj.requiresApprovalDeceasedListingID);
                                                 console.log(obj.firstName);
                                                 console.log(obj.surname);
                                                 console.log(obj.maidenName);
                                                 console.log(obj.dateOfDeath);
                                                 console.log(obj.graveNumber);
-                                                console.log(obj.imageOfBurialSite);*/
+                                                console.log(obj.imageOfBurialSite);
                                                 
                                                 localStorage.otherNames = JSON.stringify(obj.names);
                                                 
